benchmarks/polybench-c-3.2/multifor-compiler3.3/source/y.output
État 62 conflits: 1 décalage/réduction
État 83 conflits: 1 décalage/réduction
État 84 conflits: 1 décalage/réduction
État 85 conflits: 1 décalage/réduction
État 86 conflits: 5 décalage/réduction
État 87 conflits: 1 décalage/réduction
État 183 conflits: 1 décalage/réduction
État 209 conflits: 1 décalage/réduction


Grammaire

    0 $accept: mul $end

    1 mul: Multifor Pouv init Pvirg comp Pvirg inc Pvirg grain Pvirg offset Pferm corps

    2 corps: CropssansAcc mul
    3      | Accouv block Accferm ResteProg

    4 CropssansAcc: /* vide */

    5 block: mul
    6      | inst ResteProg2

    7 ResteProg: /* vide */
    8          | mul
    9          | inst ResteProg

   10 ResteProg2: /* vide */
   11           | mul
   12           | inst ResteProg2

   13 Variable: Var SuiteVar

   14 SuiteVar: /* vide */
   15         | CrochOuv expression CrochFerm SuiteSuiteVar
   16         | Fleche Variable

   17 SuiteSuiteVar: /* vide */
   18              | CrochOuv expression CrochFerm SuiteSuiteVar

   19 expression: expression Plus expression
   20           | expression Moin expression
   21           | expression Mul expression
   22           | expression Mod expression
   23           | expression Div expression
   24           | Pouv expression Pferm
   25           | Moin expression
   26           | terme

   27 terme: Var SuiteVar2
   28      | Entier
   29      | texte
   30      | NBRR

   31 NegEntier: Entier
   32          | Moin Entier

   33 suiteParamFonct: /* vide */
   34                | Virg paramFonct

   35 SuiteVar2: /* vide */
   36          | CrochOuv expression CrochFerm SuiteSuiteVar
   37          | Pouv paramFonct Pferm
   38          | Fleche Variable

   39 paramFonct: /* vide */
   40           | expression suiteParamFonct

   41 appelFonction: Var Pouv paramFonct Pferm Pvirg

   42 exprArithTab: Variable suiteOpIncr Pvirg

   43 suiteInstructions2: /* vide */
   44                   | typeInstruction suiteInstructions2

   45 blockInstr: typeInstruction
   46           | Accouv typeInstruction suiteInstructions2 Accferm

   47 suiteSuiteCondIF: /* vide */
   48                 | ET condIF
   49                 | OU condIF

   50 condIF: expression suiteCondIF suiteSuiteCondIF
   51       | Pouv condIF Pferm suiteSuiteCondIF

   52 suiteCondIF: /* vide */
   53            | OpRel expression

   54 suiteControleIF: /* vide */
   55                | ELSE blockInstr

   56 controleIF: IF Pouv condIF Pferm blockInstr suiteControleIF

   57 controleWHILE: WHILE Pouv condIF Pferm blockInstr

   58 controleDOWHILE: DO blockInstr WHILE Pouv condIF Pferm Pvirg

   59 exprArithTab2: Variable OpAff expression

   60 initFOR: /* vide */
   61        | exprArithTab2

   62 condFOR: /* vide */
   63        | condIF

   64 suiteOpIncr: Incr
   65            | Decr
   66            | Ajout expression
   67            | Sous expression
   68            | OpAff expression

   69 opIncr: Variable suiteOpIncr

   70 incrFOR: /* vide */
   71        | opIncr

   72 controleFOR: FOR Pouv initFOR Pvirg condFOR Pvirg incrFOR Pferm blockInstr

   73 suiteaffectmul: /* vide */
   74               | Virg initFOR suiteaffectmul

   75 affectmul: initFOR suiteaffectmul

   76 suitecompmul: /* vide */
   77             | Virg condFOR suitecompmul

   78 compmul: condFOR suitecompmul

   79 suiteincrmtmul: /* vide */
   80               | Virg incrFOR suiteincrmtmul

   81 incrmtmul: incrFOR suiteincrmtmul

   82 suitegrainmul: /* vide */
   83              | Virg Entier suitegrainmul

   84 grainmul: Entier suitegrainmul

   85 suiteoffsetmul: /* vide */
   86               | Virg Entier suiteoffsetmul

   87 offsetmul: Entier suiteoffsetmul

   88 suiteInstructions3: /* vide */
   89                   | typeInstruction2 suiteInstructions3

   90 typeInstruction2: Entier Dpoint typeInstruction
   91                 | controleMULTIFOR

   92 blockInstr2: typeInstruction2
   93            | Accouv typeInstruction2 suiteInstructions3 Accferm

   94 controleMULTIFOR: Multifor Pouv affectmul Pvirg compmul Pvirg incrmtmul Pvirg grainmul Pvirg offsetmul Pferm blockInstr2

   95 valeur: Var
   96       | Entier

   97 suitecasSwitch: /* vide */
   98               | Case valeur Dpoint blockInstr suitecasSwitch
   99               | Default Dpoint blockInstr

  100 casSwitch: Case valeur Dpoint blockInstr suitecasSwitch

  101 controleSwitch: Switch Pouv expression Pferm Accouv casSwitch Accferm

  102 pointeur: /* vide */
  103         | Mul pointeur

  104 elementTab: expression
  105           | listeTab

  106 suiteListeTab: /* vide */
  107              | Virg elementTab suiteListeTab

  108 listeTab: Accouv elementTab suiteListeTab Accferm

  109 suiteDeclaration2: expression
  110                  | listeTab

  111 suiteDeclaration: /* vide */
  112                 | OpAff suiteDeclaration2

  113 expression2: /* vide */
  114            | expression

  115 suiteDecTab: /* vide */
  116            | CrochOuv expression2 CrochFerm suiteDecTab

  117 declaration: Var pointeur Var suiteDecTab suiteDeclaration Pvirg

  118 typeInstruction: appelFonction
  119                | exprArithTab
  120                | controleIF
  121                | controleWHILE
  122                | controleDOWHILE
  123                | controleFOR
  124                | controleMULTIFOR
  125                | controleSwitch
  126                | declaration
  127                | Pvirg
  128                | BREAK Pvirg

  129 lesInstructions: typeInstruction
  130                | Accouv typeInstruction suiteInstructions Accferm

  131 suiteInstructions: /* vide */
  132                  | typeInstruction suiteInstructions

  133 inst: Entier Dpoint lesInstructions

  134 OP_ADD: Plus
  135       | Moin

  136 facteurBA: terme
  137          | Moin terme

  138 termeBA: termeBA Mul facteurBA
  139        | facteurBA

  140 bAffine: bAffine OP_ADD termeBA
  141        | termeBA

  142 init: initSuite Var OpAff bAffine

  143 initSuite: /* vide */
  144          | init Virg

  145 comp: compSuite Var OpRel bAffine

  146 compSuite: /* vide */
  147          | comp Virg

  148 inc: incSuite Var suite

  149 suite: Incr
  150      | Decr
  151      | Ajout NegEntier
  152      | Sous NegEntier

  153 incSuite: /* vide */
  154         | inc Virg

  155 grain: grainSuite NegEntier

  156 grainSuite: /* vide */
  157           | grain Virg

  158 offset: offsetSuite NegEntier

  159 offsetSuite: /* vide */
  160            | offset Virg


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
Fleche (258) 16 38
ET (259) 48
OU (260) 49
BREAK (261) 128
FOR (262) 72
IF (263) 56
ELSE (264) 55
DO (265) 58
WHILE (266) 57 58
Switch (267) 101
Case (268) 98 100
Default (269) 99
Multifor (270) 1 94
Pouv (271) 1 24 37 41 51 56 57 58 72 94 101
Pferm (272) 1 24 37 41 51 56 57 58 72 94 101
Accouv (273) 3 46 93 101 108 130
Accferm (274) 3 46 93 101 108 130
OpAff (275) 59 68 112 142
Pvirg (276) 1 41 42 58 72 94 117 127 128
Dpoint (277) 90 98 99 100 133
Virg (278) 34 74 77 80 83 86 107 144 147 154 157 160
Plus (279) 19 134
Moin (280) 20 25 32 135 137
Div (281) 23
Mod (282) 22
Mul (283) 21 103 138
Ajout (284) 66 151
Sous (285) 67 152
Incr (286) 64 149
Decr (287) 65 150
Entier (288) 28 31 32 83 84 86 87 90 96 133
Var (289) 13 27 41 95 117 142 145 148
OpRel (290) 53 145
CrochOuv (291) 15 18 36 116
CrochFerm (292) 15 18 36 116
texte (293) 29
NBRR (294) 30
MOINSU (295)


Non-terminaux, suivis des règles où ils apparaissent

$accept (41)
    à gauche: 0
mul (42)
    à gauche: 1, à droite: 0 2 5 8 11
corps (43)
    à gauche: 2 3, à droite: 1
CropssansAcc (44)
    à gauche: 4, à droite: 2
block (45)
    à gauche: 5 6, à droite: 3
ResteProg (46)
    à gauche: 7 8 9, à droite: 3 9
ResteProg2 (47)
    à gauche: 10 11 12, à droite: 6 12
Variable (48)
    à gauche: 13, à droite: 16 38 42 59 69
SuiteVar (49)
    à gauche: 14 15 16, à droite: 13
SuiteSuiteVar (50)
    à gauche: 17 18, à droite: 15 18 36
expression (51)
    à gauche: 19 20 21 22 23 24 25 26, à droite: 15 18 19 20 21 22
    23 24 25 36 40 50 53 59 66 67 68 101 104 109 114
terme (52)
    à gauche: 27 28 29 30, à droite: 26 136 137
NegEntier (53)
    à gauche: 31 32, à droite: 151 152 155 158
suiteParamFonct (54)
    à gauche: 33 34, à droite: 40
SuiteVar2 (55)
    à gauche: 35 36 37 38, à droite: 27
paramFonct (56)
    à gauche: 39 40, à droite: 34 37 41
appelFonction (57)
    à gauche: 41, à droite: 118
exprArithTab (58)
    à gauche: 42, à droite: 119
suiteInstructions2 (59)
    à gauche: 43 44, à droite: 44 46
blockInstr (60)
    à gauche: 45 46, à droite: 55 56 57 58 72 98 99 100
suiteSuiteCondIF (61)
    à gauche: 47 48 49, à droite: 50 51
condIF (62)
    à gauche: 50 51, à droite: 48 49 51 56 57 58 63
suiteCondIF (63)
    à gauche: 52 53, à droite: 50
suiteControleIF (64)
    à gauche: 54 55, à droite: 56
controleIF (65)
    à gauche: 56, à droite: 120
controleWHILE (66)
    à gauche: 57, à droite: 121
controleDOWHILE (67)
    à gauche: 58, à droite: 122
exprArithTab2 (68)
    à gauche: 59, à droite: 61
initFOR (69)
    à gauche: 60 61, à droite: 72 74 75
condFOR (70)
    à gauche: 62 63, à droite: 72 77 78
suiteOpIncr (71)
    à gauche: 64 65 66 67 68, à droite: 42 69
opIncr (72)
    à gauche: 69, à droite: 71
incrFOR (73)
    à gauche: 70 71, à droite: 72 80 81
controleFOR (74)
    à gauche: 72, à droite: 123
suiteaffectmul (75)
    à gauche: 73 74, à droite: 74 75
affectmul (76)
    à gauche: 75, à droite: 94
suitecompmul (77)
    à gauche: 76 77, à droite: 77 78
compmul (78)
    à gauche: 78, à droite: 94
suiteincrmtmul (79)
    à gauche: 79 80, à droite: 80 81
incrmtmul (80)
    à gauche: 81, à droite: 94
suitegrainmul (81)
    à gauche: 82 83, à droite: 83 84
grainmul (82)
    à gauche: 84, à droite: 94
suiteoffsetmul (83)
    à gauche: 85 86, à droite: 86 87
offsetmul (84)
    à gauche: 87, à droite: 94
suiteInstructions3 (85)
    à gauche: 88 89, à droite: 89 93
typeInstruction2 (86)
    à gauche: 90 91, à droite: 89 92 93
blockInstr2 (87)
    à gauche: 92 93, à droite: 94
controleMULTIFOR (88)
    à gauche: 94, à droite: 91 124
valeur (89)
    à gauche: 95 96, à droite: 98 100
suitecasSwitch (90)
    à gauche: 97 98 99, à droite: 98 100
casSwitch (91)
    à gauche: 100, à droite: 101
controleSwitch (92)
    à gauche: 101, à droite: 125
pointeur (93)
    à gauche: 102 103, à droite: 103 117
elementTab (94)
    à gauche: 104 105, à droite: 107 108
suiteListeTab (95)
    à gauche: 106 107, à droite: 107 108
listeTab (96)
    à gauche: 108, à droite: 105 110
suiteDeclaration2 (97)
    à gauche: 109 110, à droite: 112
suiteDeclaration (98)
    à gauche: 111 112, à droite: 117
expression2 (99)
    à gauche: 113 114, à droite: 116
suiteDecTab (100)
    à gauche: 115 116, à droite: 116 117
declaration (101)
    à gauche: 117, à droite: 126
typeInstruction (102)
    à gauche: 118 119 120 121 122 123 124 125 126 127 128, à droite:
    44 45 46 90 129 130 132
lesInstructions (103)
    à gauche: 129 130, à droite: 133
suiteInstructions (104)
    à gauche: 131 132, à droite: 130 132
inst (105)
    à gauche: 133, à droite: 6 9 12
OP_ADD (106)
    à gauche: 134 135, à droite: 140
facteurBA (107)
    à gauche: 136 137, à droite: 138 139
termeBA (108)
    à gauche: 138 139, à droite: 138 140 141
bAffine (109)
    à gauche: 140 141, à droite: 140 142 145
init (110)
    à gauche: 142, à droite: 1 144
initSuite (111)
    à gauche: 143 144, à droite: 142
comp (112)
    à gauche: 145, à droite: 1 147
compSuite (113)
    à gauche: 146 147, à droite: 145
inc (114)
    à gauche: 148, à droite: 1 154
suite (115)
    à gauche: 149 150 151 152, à droite: 148
incSuite (116)
    à gauche: 153 154, à droite: 148
grain (117)
    à gauche: 155, à droite: 1 157
grainSuite (118)
    à gauche: 156 157, à droite: 155
offset (119)
    à gauche: 158, à droite: 1 160
offsetSuite (120)
    à gauche: 159 160, à droite: 158


état 0

    0 $accept: . mul $end

    Multifor  décalage et aller à l'état 1

    mul  aller à l'état 2


état 1

    1 mul: Multifor . Pouv init Pvirg comp Pvirg inc Pvirg grain Pvirg offset Pferm corps

    Pouv  décalage et aller à l'état 3


état 2

    0 $accept: mul . $end

    $end  décalage et aller à l'état 4


état 3

    1 mul: Multifor Pouv . init Pvirg comp Pvirg inc Pvirg grain Pvirg offset Pferm corps

    $défaut  réduction par utilisation de la règle 143 (initSuite)

    init       aller à l'état 5
    initSuite  aller à l'état 6


état 4

    0 $accept: mul $end .

    $défaut  accepter


état 5

    1 mul: Multifor Pouv init . Pvirg comp Pvirg inc Pvirg grain Pvirg offset Pferm corps
  144 initSuite: init . Virg

    Pvirg  décalage et aller à l'état 7
    Virg   décalage et aller à l'état 8


état 6

  142 init: initSuite . Var OpAff bAffine

    Var  décalage et aller à l'état 9


état 7

    1 mul: Multifor Pouv init Pvirg . comp Pvirg inc Pvirg grain Pvirg offset Pferm corps

    $défaut  réduction par utilisation de la règle 146 (compSuite)

    comp       aller à l'état 10
    compSuite  aller à l'état 11


état 8

  144 initSuite: init Virg .

    $défaut  réduction par utilisation de la règle 144 (initSuite)


état 9

  142 init: initSuite Var . OpAff bAffine

    OpAff  décalage et aller à l'état 12


état 10

    1 mul: Multifor Pouv init Pvirg comp . Pvirg inc Pvirg grain Pvirg offset Pferm corps
  147 compSuite: comp . Virg

    Pvirg  décalage et aller à l'état 13
    Virg   décalage et aller à l'état 14


état 11

  145 comp: compSuite . Var OpRel bAffine

    Var  décalage et aller à l'état 15


état 12

  142 init: initSuite Var OpAff . bAffine

    Moin    décalage et aller à l'état 16
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    terme      aller à l'état 21
    facteurBA  aller à l'état 22
    termeBA    aller à l'état 23
    bAffine    aller à l'état 24


état 13

    1 mul: Multifor Pouv init Pvirg comp Pvirg . inc Pvirg grain Pvirg offset Pferm corps

    $défaut  réduction par utilisation de la règle 153 (incSuite)

    inc       aller à l'état 25
    incSuite  aller à l'état 26


état 14

  147 compSuite: comp Virg .

    $défaut  réduction par utilisation de la règle 147 (compSuite)


état 15

  145 comp: compSuite Var . OpRel bAffine

    OpRel  décalage et aller à l'état 27


état 16

  137 facteurBA: Moin . terme

    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    terme  aller à l'état 28


état 17

   28 terme: Entier .

    $défaut  réduction par utilisation de la règle 28 (terme)


état 18

   27 terme: Var . SuiteVar2

    Fleche    décalage et aller à l'état 29
    Pouv      décalage et aller à l'état 30
    CrochOuv  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 35 (SuiteVar2)

    SuiteVar2  aller à l'état 32


état 19

   29 terme: texte .

    $défaut  réduction par utilisation de la règle 29 (terme)


état 20

   30 terme: NBRR .

    $défaut  réduction par utilisation de la règle 30 (terme)


état 21

  136 facteurBA: terme .

    $défaut  réduction par utilisation de la règle 136 (facteurBA)


état 22

  139 termeBA: facteurBA .

    $défaut  réduction par utilisation de la règle 139 (termeBA)


état 23

  138 termeBA: termeBA . Mul facteurBA
  141 bAffine: termeBA .

    Mul  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 141 (bAffine)


état 24

  140 bAffine: bAffine . OP_ADD termeBA
  142 init: initSuite Var OpAff bAffine .

    Plus  décalage et aller à l'état 34
    Moin  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 142 (init)

    OP_ADD  aller à l'état 36


état 25

    1 mul: Multifor Pouv init Pvirg comp Pvirg inc . Pvirg grain Pvirg offset Pferm corps
  154 incSuite: inc . Virg

    Pvirg  décalage et aller à l'état 37
    Virg   décalage et aller à l'état 38


état 26

  148 inc: incSuite . Var suite

    Var  décalage et aller à l'état 39


état 27

  145 comp: compSuite Var OpRel . bAffine

    Moin    décalage et aller à l'état 16
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    terme      aller à l'état 21
    facteurBA  aller à l'état 22
    termeBA    aller à l'état 23
    bAffine    aller à l'état 40


état 28

  137 facteurBA: Moin terme .

    $défaut  réduction par utilisation de la règle 137 (facteurBA)


état 29

   38 SuiteVar2: Fleche . Variable

    Var  décalage et aller à l'état 41

    Variable  aller à l'état 42


état 30

   37 SuiteVar2: Pouv . paramFonct Pferm

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 39 (paramFonct)

    expression  aller à l'état 45
    terme       aller à l'état 46
    paramFonct  aller à l'état 47


état 31

   36 SuiteVar2: CrochOuv . expression CrochFerm SuiteSuiteVar

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 48
    terme       aller à l'état 46


état 32

   27 terme: Var SuiteVar2 .

    $défaut  réduction par utilisation de la règle 27 (terme)


état 33

  138 termeBA: termeBA Mul . facteurBA

    Moin    décalage et aller à l'état 16
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    terme      aller à l'état 21
    facteurBA  aller à l'état 49


état 34

  134 OP_ADD: Plus .

    $défaut  réduction par utilisation de la règle 134 (OP_ADD)


état 35

  135 OP_ADD: Moin .

    $défaut  réduction par utilisation de la règle 135 (OP_ADD)


état 36

  140 bAffine: bAffine OP_ADD . termeBA

    Moin    décalage et aller à l'état 16
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    terme      aller à l'état 21
    facteurBA  aller à l'état 22
    termeBA    aller à l'état 50


état 37

    1 mul: Multifor Pouv init Pvirg comp Pvirg inc Pvirg . grain Pvirg offset Pferm corps

    $défaut  réduction par utilisation de la règle 156 (grainSuite)

    grain       aller à l'état 51
    grainSuite  aller à l'état 52


état 38

  154 incSuite: inc Virg .

    $défaut  réduction par utilisation de la règle 154 (incSuite)


état 39

  148 inc: incSuite Var . suite

    Ajout  décalage et aller à l'état 53
    Sous   décalage et aller à l'état 54
    Incr   décalage et aller à l'état 55
    Decr   décalage et aller à l'état 56

    suite  aller à l'état 57


état 40

  140 bAffine: bAffine . OP_ADD termeBA
  145 comp: compSuite Var OpRel bAffine .

    Plus  décalage et aller à l'état 34
    Moin  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 145 (comp)

    OP_ADD  aller à l'état 36


état 41

   13 Variable: Var . SuiteVar

    Fleche    décalage et aller à l'état 58
    CrochOuv  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 14 (SuiteVar)

    SuiteVar  aller à l'état 60


état 42

   38 SuiteVar2: Fleche Variable .

    $défaut  réduction par utilisation de la règle 38 (SuiteVar2)


état 43

   24 expression: Pouv . expression Pferm

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 61
    terme       aller à l'état 46


état 44

   25 expression: Moin . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 62
    terme       aller à l'état 46


état 45

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression
   40 paramFonct: expression . suiteParamFonct

    Virg  décalage et aller à l'état 63
    Plus  décalage et aller à l'état 64
    Moin  décalage et aller à l'état 65
    Div   décalage et aller à l'état 66
    Mod   décalage et aller à l'état 67
    Mul   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 33 (suiteParamFonct)

    suiteParamFonct  aller à l'état 69


état 46

   26 expression: terme .

    $défaut  réduction par utilisation de la règle 26 (expression)


état 47

   37 SuiteVar2: Pouv paramFonct . Pferm

    Pferm  décalage et aller à l'état 70


état 48

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression
   36 SuiteVar2: CrochOuv expression . CrochFerm SuiteSuiteVar

    Plus       décalage et aller à l'état 64
    Moin       décalage et aller à l'état 65
    Div        décalage et aller à l'état 66
    Mod        décalage et aller à l'état 67
    Mul        décalage et aller à l'état 68
    CrochFerm  décalage et aller à l'état 71


état 49

  138 termeBA: termeBA Mul facteurBA .

    $défaut  réduction par utilisation de la règle 138 (termeBA)


état 50

  138 termeBA: termeBA . Mul facteurBA
  140 bAffine: bAffine OP_ADD termeBA .

    Mul  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 140 (bAffine)


état 51

    1 mul: Multifor Pouv init Pvirg comp Pvirg inc Pvirg grain . Pvirg offset Pferm corps
  157 grainSuite: grain . Virg

    Pvirg  décalage et aller à l'état 72
    Virg   décalage et aller à l'état 73


état 52

  155 grain: grainSuite . NegEntier

    Moin    décalage et aller à l'état 74
    Entier  décalage et aller à l'état 75

    NegEntier  aller à l'état 76


état 53

  151 suite: Ajout . NegEntier

    Moin    décalage et aller à l'état 74
    Entier  décalage et aller à l'état 75

    NegEntier  aller à l'état 77


état 54

  152 suite: Sous . NegEntier

    Moin    décalage et aller à l'état 74
    Entier  décalage et aller à l'état 75

    NegEntier  aller à l'état 78


état 55

  149 suite: Incr .

    $défaut  réduction par utilisation de la règle 149 (suite)


état 56

  150 suite: Decr .

    $défaut  réduction par utilisation de la règle 150 (suite)


état 57

  148 inc: incSuite Var suite .

    $défaut  réduction par utilisation de la règle 148 (inc)


état 58

   16 SuiteVar: Fleche . Variable

    Var  décalage et aller à l'état 41

    Variable  aller à l'état 79


état 59

   15 SuiteVar: CrochOuv . expression CrochFerm SuiteSuiteVar

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 80
    terme       aller à l'état 46


état 60

   13 Variable: Var SuiteVar .

    $défaut  réduction par utilisation de la règle 13 (Variable)


état 61

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression
   24           | Pouv expression . Pferm

    Pferm  décalage et aller à l'état 81
    Plus   décalage et aller à l'état 64
    Moin   décalage et aller à l'état 65
    Div    décalage et aller à l'état 66
    Mod    décalage et aller à l'état 67
    Mul    décalage et aller à l'état 68


état 62

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression
   25           | Moin expression .

    Mod  décalage et aller à l'état 67

    Mod       [réduction par utilisation de la règle 25 (expression)]
    $défaut  réduction par utilisation de la règle 25 (expression)


état 63

   34 suiteParamFonct: Virg . paramFonct

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 39 (paramFonct)

    expression  aller à l'état 45
    terme       aller à l'état 46
    paramFonct  aller à l'état 82


état 64

   19 expression: expression Plus . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 83
    terme       aller à l'état 46


état 65

   20 expression: expression Moin . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 84
    terme       aller à l'état 46


état 66

   23 expression: expression Div . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 85
    terme       aller à l'état 46


état 67

   22 expression: expression Mod . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 86
    terme       aller à l'état 46


état 68

   21 expression: expression Mul . expression

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20

    expression  aller à l'état 87
    terme       aller à l'état 46


état 69

   40 paramFonct: expression suiteParamFonct .

    $défaut  réduction par utilisation de la règle 40 (paramFonct)


état 70

   37 SuiteVar2: Pouv paramFonct Pferm .

    $défaut  réduction par utilisation de la règle 37 (SuiteVar2)


état 71

   36 SuiteVar2: CrochOuv expression CrochFerm . SuiteSuiteVar

    CrochOuv  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 17 (SuiteSuiteVar)

    SuiteSuiteVar  aller à l'état 89


état 72

    1 mul: Multifor Pouv init Pvirg comp Pvirg inc Pvirg grain Pvirg . offset Pferm corps

    $défaut  réduction par utilisation de la règle 159 (offsetSuite)

    offset       aller à l'état 90
    offsetSuite  aller à l'état 91


état 73

  157 grainSuite: grain Virg .

    $défaut  réduction par utilisation de la règle 157 (grainSuite)


état 74

   32 NegEntier: Moin . Entier

    Entier  décalage et aller à l'état 92


état 75

   31 NegEntier: Entier .

    $défaut  réduction par utilisation de la règle 31 (NegEntier)


état 76

  155 grain: grainSuite NegEntier .

    $défaut  réduction par utilisation de la règle 155 (grain)


état 77

  151 suite: Ajout NegEntier .

    $défaut  réduction par utilisation de la règle 151 (suite)


état 78

  152 suite: Sous NegEntier .

    $défaut  réduction par utilisation de la règle 152 (suite)


état 79

   16 SuiteVar: Fleche Variable .

    $défaut  réduction par utilisation de la règle 16 (SuiteVar)


état 80

   15 SuiteVar: CrochOuv expression . CrochFerm SuiteSuiteVar
   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression

    Plus       décalage et aller à l'état 64
    Moin       décalage et aller à l'état 65
    Div        décalage et aller à l'état 66
    Mod        décalage et aller à l'état 67
    Mul        décalage et aller à l'état 68
    CrochFerm  décalage et aller à l'état 93


état 81

   24 expression: Pouv expression Pferm .

    $défaut  réduction par utilisation de la règle 24 (expression)


état 82

   34 suiteParamFonct: Virg paramFonct .

    $défaut  réduction par utilisation de la règle 34 (suiteParamFonct)


état 83

   19 expression: expression . Plus expression
   19           | expression Plus expression .
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression

    Div  décalage et aller à l'état 66
    Mod  décalage et aller à l'état 67
    Mul  décalage et aller à l'état 68

    Mod       [réduction par utilisation de la règle 19 (expression)]
    $défaut  réduction par utilisation de la règle 19 (expression)


état 84

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   20           | expression Moin expression .
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression

    Div  décalage et aller à l'état 66
    Mod  décalage et aller à l'état 67
    Mul  décalage et aller à l'état 68

    Mod       [réduction par utilisation de la règle 20 (expression)]
    $défaut  réduction par utilisation de la règle 20 (expression)


état 85

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   23           | expression . Div expression
   23           | expression Div expression .

    Mod  décalage et aller à l'état 67

    Mod       [réduction par utilisation de la règle 23 (expression)]
    $défaut  réduction par utilisation de la règle 23 (expression)


état 86

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   22           | expression . Mod expression
   22           | expression Mod expression .
   23           | expression . Div expression

    Plus  décalage et aller à l'état 64
    Moin  décalage et aller à l'état 65
    Div   décalage et aller à l'état 66
    Mod   décalage et aller à l'état 67
    Mul   décalage et aller à l'état 68

    Plus      [réduction par utilisation de la règle 22 (expression)]
    Moin      [réduction par utilisation de la règle 22 (expression)]
    Div       [réduction par utilisation de la règle 22 (expression)]
    Mod       [réduction par utilisation de la règle 22 (expression)]
    Mul       [réduction par utilisation de la règle 22 (expression)]
    $défaut  réduction par utilisation de la règle 22 (expression)


état 87

   19 expression: expression . Plus expression
   20           | expression . Moin expression
   21           | expression . Mul expression
   21           | expression Mul expression .
   22           | expression . Mod expression
   23           | expression . Div expression

    Mod  décalage et aller à l'état 67

    Mod       [réduction par utilisation de la règle 21 (expression)]
    $défaut  réduction par utilisation de la règle 21 (expression)


état 88

   18 SuiteSuiteVar: CrochOuv . expression CrochFerm SuiteSuiteVar

    Pouv    décalage et aller à l'état 43
    Moin    décalage et aller à l'état 44
    Entier  décalage et aller à l'état 17
    Var     décalage et aller à l'état 18
    texte   décalage et aller à l'état 19
    NBRR    décalage et aller à l'état 20
